--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perpustakaan Haya Farras</title>
 
-  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
@@ -21,82 +20,56 @@
       background: linear-gradient(180deg, #dbeafe, #ffffff);
       color: #2c2c2c;
       position: relative;
-      overflow-x: hidden;
     }
 
-    /* ⭐ STAR BACKGROUND */
-    body::before {
-      content: "";
-      position: fixed;
-      inset: 0;
-      background-image:
-        radial-gradient(1px 1px at 10% 20%, #ffffff, transparent),
-        radial-gradient(1.5px 1.5px at 30% 70%, #ffffff, transparent),
-        radial-gradient(1px 1px at 50% 40%, #ffffff, transparent),
-        radial-gradient(1.5px 1.5px at 70% 30%, #ffffff, transparent),
-        radial-gradient(1px 1px at 85% 80%, #ffffff, transparent);
-      animation: twinkle 4s infinite alternate;
-      opacity: 0.8;
-      z-index: 0;
-    }
-
-    @keyframes twinkle {
-      from { opacity: 0.4; }
-      to { opacity: 1; }
-    }
-
+    /* HEADER */
     header {
-      padding: 24px;
-      text-align: center;
+      background-color: #bfdbfe;
+      padding: 24px 32px;
       position: relative;
-      z-index: 1;
     }
 
     header h1 {
-      font-size: 36px;
-      color: #ffffff;
-      text-shadow: 0 0 10px #93c5fd;
+      font-size: 28px;
+      color: #1e3a8a;
     }
 
+    /* NAVIGATION */
     nav {
+      position: fixed;
+      top: 20px;
+      right: 32px;
       display: flex;
-      justify-content: center;
-      gap: 24px;
-      padding: 12px;
-      background: rgba(255,255,255,0.6);
+      gap: 20px;
+      background: rgba(255, 255, 255, 0.7);
+      padding: 10px 18px;
+      border-radius: 20px;
       backdrop-filter: blur(6px);
-      position: relative;
-      z-index: 1;
+      z-index: 100;
     }
 
     nav a {
       text-decoration: none;
-      color: #2563eb;
       font-weight: 600;
+      color: #2563eb;
     }
 
     nav a:hover {
       text-decoration: underline;
     }
 
+    /* MAIN CONTENT */
     main {
       max-width: 800px;
-      margin: 80px auto;
+      margin: 120px auto;
       padding: 20px;
       text-align: center;
-      position: relative;
-      z-index: 1;
-      animation: fadeIn 2s ease-in-out;
     }
 
     main h2 {
       font-size: 48px;
       color: #ffffff;
-      text-shadow:
-        0 0 6px #ffffff,
-        0 0 12px #93c5fd,
-        0 0 24px #93c5fd;
-      animation: glowText 2.5s ease-in-out infinite alternate;
+      text-shadow: 0 0 10px #93c5fd;
     }
 
     main p {
@@ -106,33 +79,13 @@
       line-height: 1.7;
     }
 
+    /* FOOTER */
     footer {
+      background-color: #93c5fd;
       text-align: center;
       padding: 16px;
       font-size: 14px;
-      background: rgba(255,255,255,0.5);
-      position: relative;
-      z-index: 1;
-    }
-
-    @keyframes glowText {
-      from {
-        text-shadow: 0 0 6px #ffffff, 0 0 12px #93c5fd;
-      }
-      to {
-        text-shadow: 0 0 12px #ffffff, 0 0 30px #60a5fa;
-      }
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      color: #1e3a8a;
     }
   </style>
 </head>
@@ -144,18 +97,18 @@
   </header>
 
   <nav>
-    <a href="#">Home</a>
-    <a href="#">Koleksi</a>
-    <a href="#">Tentang</a>
-    <a href="#">Kontak</a>
+    <a href="index.html">Home</a>
+    <a href="koleksi.html">Koleksi</a>
+    <a href="tentang.html">Tentang</a>
+    <a href="kontak.html">Kontak</a>
   </nav>
 
   <main>
-    <h2>⭐ COMING SOON ⭐</h2>
+    <h2>COMING SOON</h2>
     <p>
-      Halo! Terima kasih telah berkunjung 🌱<br>
-      Website Perpustakaan Haya Farras masih dalam tahap pengembangan.<br><br>
-      Mohon nantikan kehadiran layanan dan koleksi digital kami yaa ✨
+      Website Perpustakaan Haya Farras masih dalam tahap pengembangan 🌱  
+      <br><br>
+      Mohon nantikan yaa ✨
     </p>
   </main>
 
