--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perpustakaan Haya Farras</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
     * {
@@ -16,11 +16,15 @@
 
     body {
       min-height: 100vh;
+      display: flex;
+      flex-direction: column;
       font-family: 'Poppins', sans-serif;
       background: linear-gradient(180deg, #dbeafe, #ffffff);
+      color: #2c2c2c;
+      overflow-x: hidden;
     }
 
-    /* INTRO */
+    /* ================= INTRO ================= */
     .intro {
       position: fixed;
       inset: 0;
@@ -35,46 +39,17 @@
     }
 
     .intro h1 {
-      font-size: 48px;
+      font-size: 56px;
       color: #1e3a8a;
+      text-align: center;
       animation: zoomIn 1.5s ease;
-      text-align: center;
     }
 
-    /* HEADER */
-    header {
-      background: #bfdbfe;
-      padding: 24px 32px;
-    }
-
-    nav {
-      position: fixed;
-      top: 20px;
-      right: 32px;
-      background: rgba(255,255,255,0.8);
-      padding: 10px 18px;
-      border-radius: 20px;
-      display: flex;
-      gap: 20px;
-    }
-
-    nav a {
-      text-decoration: none;
+    .intro h2 {
+      margin-top: 14px;
+      font-size: 22px;
+      font-weight: 500;
       color: #2563eb;
-      font-weight: 600;
-    }
-
-    main {
-      max-width: 800px;
-      margin: 140px auto;
-      text-align: center;
-      padding: 20px;
-    }
-
-    footer {
-      background: #93c5fd;
-      text-align: center;
-      padding: 16px;
     }
 
     @keyframes zoomIn {
@@ -85,41 +60,138 @@
     @keyframes fadeOut {
       to { opacity: 0; visibility: hidden; }
     }
+
+    /* ================= HEADER ================= */
+    header {
+      background-color: #bfdbfe;
+      padding: 24px 32px;
+    }
+
+    header h1 {
+      font-size: 28px;
+      color: #1e3a8a;
+    }
+
+    /* ================= NAV ================= */
+    nav {
+      position: fixed;
+      top: 20px;
+      right: 32px;
+      display: flex;
+      gap: 20px;
+      background: rgba(255,255,255,0.8);
+      padding: 10px 18px;
+      border-radius: 20px;
+      backdrop-filter: blur(6px);
+      z-index: 100;
+    }
+
+    nav a {
+      text-decoration: none;
+      font-weight: 600;
+      color: #2563eb;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    /* ================= MAIN ================= */
+    main {
+      flex: 1; /* INI KUNCI */
+      max-width: 800px;
+      margin: 140px auto 0;
+      padding: 20px;
+      text-align: center;
+    }
+
+    /* COMING SOON GEMOY */
+    main h2 {
+      font-size: 48px;
+      color: #ffffff;
+      letter-spacing: 4px;
+      text-shadow:
+        0 0 6px #ffffff,
+        0 0 12px #93c5fd,
+        0 0 24px #93c5fd;
+      animation: glowText 2.5s ease-in-out infinite alternate;
+    }
+
+    main p {
+      margin-top: 24px;
+      font-size: 18px;
+      color: #4b5563;
+      line-height: 1.7;
+    }
+
+    @keyframes glowText {
+      from {
+        text-shadow:
+          0 0 6px #ffffff,
+          0 0 12px #93c5fd,
+          0 0 24px #93c5fd;
+      }
+      to {
+        text-shadow:
+          0 0 10px #ffffff,
+          0 0 20px #60a5fa,
+          0 0 40px #60a5fa;
+      }
+    }
+
+    /* ================= FOOTER ================= */
+    footer {
+      background-color: #93c5fd;
+      text-align: center;
+      padding: 16px;
+      font-size: 14px;
+      color: #1e3a8a;
+    }
   </style>
 </head>
 
 <body>
 
+  <!-- INTRO -->
   <div class="intro">
-    <h1>Perpustakaan<br>Haya Farras</h1>
-    <p>Selamat datang ✨</p>
+    <h1>Selamat Datang ✨</h1>
+    <h2>Perpustakaan Haya Farras</h2>
   </div>
 
+  <!-- HEADER -->
   <header>
     <h1>Perpustakaan Haya Farras</h1>
   </header>
 
+  <!-- NAV -->
   <nav>
-    <a href="#">Home</a>
-    <a href="#">Koleksi</a>
-    <a href="#">Tentang</a>
-    <a href="#">Kontak</a>
+    <a href="index.html">Home</a>
+    <a href="koleksi.html">Koleksi</a>
+    <a href="tentang.html">Tentang</a>
+    <a href="kontak.html">Kontak</a>
   </nav>
 
+  <!-- MAIN -->
   <main>
     <h2>COMING SOON</h2>
-    <p>Saat ini website Perpustakaan Haya Farras masih dalam proses tumbuh dan berkembang🌱</p>
-       Mohon nantikan yaa!</p>
+    <p>
+      Website Perpustakaan Haya Farras masih dalam tahap tumbuh dan berkembang 🌱  
+      <br><br>
+      Mohon nantikan yaa ✨
+    </p>
   </main>
 
+  <!-- FOOTER -->
   <footer>
     © 2026 Perpustakaan Haya Farras
   </footer>
 
+  <!-- JS -->
   <script>
     window.addEventListener("load", () => {
       setTimeout(() => {
-        document.querySelector(".intro").style.display = "none";
+        const intro = document.querySelector(".intro");
+        if (intro) intro.style.display = "none";
       }, 4000);
     });
   </script>
