--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <p>
       Website Perpustakaan Haya Farras masih dalam tahap tumbuh dan berkembang 🌱  
       <br><br>
-      Mohon nantikan yaa ✨
+      Mohon nantikan!
     </p>
   </main>
 
